Fix stripe position in RTL locales

https://bugzilla.gnome.org/show_bug.cgi?id=608082